# ProceduralWorldGenerator-ProGen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
TTMMPP/core/: entity.cpp  scene.h
TTMMPP/core/common/: bounding_box.cpp
progen/: main.cpp  workspace.code-workspace
progen/algorithms/: CMakeLists.txt  cave_cellular_automata.cpp  cave_cellular_automata.h  procedural_algorithm.h
progen/game/: CMakeLists.txt  board_tile.h  game.cpp  game.h
progen/generator/: procedural_content_generator.cpp  procedural_content_generator.h
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  tmp.cpp  tmp.h
src/algorithms/: CMakeLists.txt  algorithm.cpp  algorithm.h  cave_cellular_automata.cpp  cave_cellular_automata.h
src/core/: DescribingSystem.cpp  DescribingSystem.h  Entity.cpp  Entity.h  EntitySystem.h  Scene.cpp  Scene.h  describing_system.cpp  describing_system.h  entity.cpp  entity.h  entity_system.h  locator.h  physics_system.cpp  physics_system.h  rendering_system.cpp  rendering_system.h  scene.cpp  scene.h
src/core/common/: BoundingBox.cpp  BoundingBox.h  Point.cpp  Point.h  bounding_box.cpp  bounding_box.h  dimensions.h  point.cpp  point.h
src/core/components/: DescriptionComponent.h  description_component.h  graphics_component.h  item_bag_component.h  physics_component.h  transformation_component.h
src/ecs/: Entity.cpp
src/ecs/components/: DescriptionComponent.h
src/entity_component_system/: Component.h  Entity.cpp  Entity.h  Service.cpp  Service.h
src/game/: CMakeLists.txt  game.cpp  game.h  item.h  tile.h
src/generator/: CMakeLists.txt  generator.cpp  generator.h
src/graphics/: color.cpp  color.h  renderer.cpp  renderer.h  texture.cpp  texture.h
src/io/: renderer.cpp  renderer.h  window.cpp  window.h
src/pcg/: ContentGenerator.cpp  ContentGenerator.h  Generator.h  SimpleLevelGenerator.cpp  SimpleLevelGenerator.h  SimpleRoomGenerator.cpp  SimpleRoomGenerator.h  bbox_grid_wrapper.cpp  bbox_grid_wrapper.h  binary_space_partitioning_level_generator.cpp  binary_space_partitioning_level_generator.h  blind_agent_level_generator.cpp  blind_agent_level_generator.h  corridor_generator.cpp  corridor_generator.h  generator.h  grid.cpp  grid.h  simple_level_generator.cpp  simple_level_generator.h  simple_room_generator.cpp  simple_room_generator.h  space_generator.h  stochastic_binary_space_partitioning_level_generator.cpp  stochastic_binary_space_partitioning_level_generator.h  stochastic_bsp_generator.cpp  stochastic_bsp_generator.h
src/pcg/agent_generators/: agent_generator.cpp  agent_generator.h
src/pcg/agent_generators/agents/: agent.h  look_ahead_agent.cpp  look_ahead_agent.h
src/pcg/agent_generators/agents/look_ahead/: basic_look_ahead_agent.cpp  basic_look_ahead_agent.h  cross_corridor_look_ahead_agent.cpp  cross_corridor_look_ahead_agent.h  look_ahead_agent.cpp  look_ahead_agent.h  recurring_look_ahead_agent.cpp  recurring_look_ahead_agent.h
src/pcg/agent_generators/agents/look_ahead/utils/: collision_utils.cpp  collision_utils.h  spatial_iterators.h
src/pcg/common/: BoundingBox.cpp  BoundingBox.h  Point.h
src/pcg/predefined/: enemy_names.h
src/pcg/quests/: quest_expression.h  quest_node.cpp  quest_node.h
src/pcg/quests/nodes/: crate_expression_node.cpp  crate_expression_node.h  get_expression_node.cpp  get_expression_node.h  goto_expression_node.cpp  goto_expression_node.h  kill_expression_node.cpp  kill_expression_node.h  multi_variant_quest_expression.cpp  multi_variant_quest_expression.h  non_terminal_nodes.h  open_expression_node.cpp  open_expression_node.h  terminal_nodes.cpp  terminal_nodes.h
src/pcg/quests/templates/: desecrated_statue_quest.cpp  desecrated_statue_quest.h  equipment_takeover_quest.cpp  equipment_takeover_quest.h  holy_bath_quest.cpp  holy_bath_quest.h  monument_mystery_quest.cpp  monument_mystery_quest.h  quest_templates.h
src/pcg/room_content/: room_content_type.h
src/pcg/simple_generators/: simple_corridor_generator.cpp  simple_corridor_generator.h  simple_level_generator.cpp  simple_level_generator.h  simple_room_generator.cpp  simple_room_generator.h
src/pcg/utils/: direction.h  entity_creator.cpp  entity_creator.h  grid_to_entity_parser.cpp  grid_to_entity_parser.h  grid_utils.cpp  grid_utils.h  random_iterators.h  registry_utils.cpp  registry_utils.h  room_content_provider.cpp  room_content_provider.h
src/python/: board_operations.py  ckpt-83.index  infer.py  valid_images.npy
src/random/: linear_number_generator.cpp  linear_number_generator.h  random_number_generator.cpp  random_number_generator.h
tests/: CMakeLists.txt  main.cpp
tests/algorithms/: sample_algorithm_test.cpp
tests/common/: bounding_box_test.cpp  point_test.cpp
tests/pcg/: binary_space_partitioning_level_generator_test.cpp  grid_test.cpp  grid_to_entity_parser_test.cpp  stochastic_binary_space_partitioning_level_generator_test.cpp
tests/random/: linear_random_generator_test.cpp
wgan/: image_data.txt  train.py
wgan/all_datasets/: numpy_images.npy
